<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imagen_que_muestra_de_forma_gr_fica_si_el_paciente_es_posible_covid_o_no" />

    <TextView
        android:id="@+id/textViewInfoInfectated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/informaci_n_sobre_tus_sintomas_de_covid_19_nes_probable_que_tengas_covid_asi_que_ni_se_te_ocurra_salir_de_tu_puta_casa_a_no_ser_que_sea_para_ir_a_un_hospital" />

    <Button
        android:id="@+id/buttonLlamarEmergencias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/llamar_a_emergencias" />

    <Button
        android:id="@+id/buttonHospitalCercano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/hospital_m_s_cercano" />

    <Button
        android:id="@+id/buttonComoActuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/c_mo_actuar" />

    <Button
        android:id="@+id/buttonSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/salir" />

</LinearLayout>